[package]
name = "halo09"
version = "0.1.0"
authors = ["haodiwang"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
rand_core = { version = "0.5", default-features = false }
serde = "1.0"
serde_derive = "1.0"
merlin = "2.0.0"
dusk-bls12_381 = "0.3.0"
itertools = "0.9.0"
rand_chacha = "0.2"
rayon = "1.3.0"
anyhow = "1.0.32"
dusk-jubjub = "0.5.0"
thiserror = "1.0"
canonical = {version = "0.4", optional = true}


[dependencies.amcl_wrapper]
version = "0.2.1"
default-features = false
features = ["bls381"]

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]

[features]
nightly = []
trace = []
trace-print = ["trace"]
canon = ["dusk-bls12_381/canon", "dusk-jubjub/canon", "canonical"]